--- a/1-dom-warmup.html
+++ b/1-dom-warmup.html
@@ -53,18 +53,6 @@
 </main>
 
 <script>
-	//background red
-	const warningButton = document.getElementById('warning-button');
-	warningButton.addEventListener('click', () => document.body.style.dataset.color);
-	//get the "data-color" attribute.
-	const buttonElements = document.getElementsByTagName('button');
-	const dataColor = buttonElements.getAttribute("data-color");
-	console.log(dataColor);
-	
-	//background orange
-	const warningButton2 = document
-	
-	
 	
 	
 	const blueSquare = document.getElementById("blueSquare");
@@ -89,6 +77,21 @@
 	// 			})
 	// });
 	//
+	
+	//background red
+	const warningButton = document.getElementById('warning-button');
+	warningButton.addEventListener('click', () => warningButton.style.backgroundColor = "blue");
+	//get the "data-color" attribute.
+	const buttonElements = warningButton.getElementsByTagName('button');
+	for (var i = 0 )
+	// const dataColor = buttonElements.getAttribute("data-color");
+	
+	//background orange
+	const warningButton2 = document
+	
+	
+	
+	
 	
 	//
 </script>
