--- a/1-dom-warmup.html
+++ b/1-dom-warmup.html
@@ -46,8 +46,8 @@
 	</section>
 	
 	<section>
-		<button class="buttons1" id="warning-button" data-color="red">Button</button>
-		<button class="buttons1" id="warning-button2" data-color="maroon">Button</button>
+		<button class="buttons1" id="warning-button" data-color="blue">Button</button>
+		<button class="buttons1" id="warning-button2" data-color="red">Button</button>
 		<button class="buttons1" id="reset-button" data-color="white">Button</button>
 	</section>
 </main>
@@ -74,25 +74,31 @@
 	// 			});
 	// 			element.addEventListener("mouseleave", function(event){
 	// 				event.target.style.backgroundColor = "";
-	// 			})
+	// 			});
 	// });
-	//
+
 	
 	//background red
 	const warningButton = document.getElementById('warning-button');
 	warningButton.addEventListener('click', () => warningButton.style.backgroundColor = "blue");
-	//get the "data-color" attribute.
-	const buttonElements = warningButton.getElementsByTagName('button');
-	for (var i = 0 )
+	const buttonElements = document.querySelectorAll('button');
+	
+	buttonElements.forEach((element, index, notAnarray)=> {
+		console.log('Element: ', element, 'Index: ', index, 'nodeList? :', notAnarray);
+		if (index == 1) {
+		element.addEventListener('click', () => element.style.backgroundColor = "red");
+		} else if (index == 2) {
+			element.addEventListener('click', () => element.style.backgroundColor = "green");
+		}
+		
+		});
+	
+	
+	//how do i get the "data-color" attribute?
 	// const dataColor = buttonElements.getAttribute("data-color");
 	
 	//background orange
-	const warningButton2 = document
-	
-	
-	
-	
-	
+
 	//
 </script>
 </body>
