--- a/weather_map.html
+++ b/weather_map.html
@@ -17,25 +17,31 @@
 
 </head>
 
-<body class="bg-info bg-gradient">
-	<h1 class="bg-primary text-light text-center">Weather Map</h1>
-	<!--searchbar-->
-	<section class ="searchbarSection d-flex flex-column">
-	<div><span id="user_display"></span></div>
-	<label class="text-center">Place:</label>
-	<input type="text" id="user_input" placeholder="San Antonio, Texas"
-	       class="inputFind mb-3 text-center">
-	<button id="clickme" class="buttonFind mb-0">Find</button>
-	</section>
-	
-	<!-- holding weather boxes-->
-	<section id="allWeatherContaiers" class="allWeatherContaiers text-sm-center">
-	<!--	      ^----$("#allWeatherContaiers").html(html);-->
-	</section>
-	<!--the map, it was difficult to center outside of bootstrap.-->
-	<div id="map" class="m-auto mt-3 mb-5"></div>
-	
-	
+<body class="bg-light bg-gradient">
+	<header>
+		<h1 class="bg-primary text-light d-flex justify-content-center">Weather Map</h1>
+	</header>
+	<main>
+		<!--searchbar-->
+		<section class ="searchbarSection d-flex flex-column">
+		<div><span id="user_display"></span></div>
+		<label class="text-center mb-2">Weather Map Search:</label>
+		<input type="text" id="user_input" placeholder="San Antonio, Texas"
+		       class="inputFind mb-3 text-center">
+		<button id="clickme" class="buttonFind mb-0">Search Area</button>
+		</section>
+		
+		<!-- holding weather boxes-->
+		<section id="allWeatherContaiers" class="allWeatherContaiers text-sm-center">
+		<!--	      ^----$("#allWeatherContaiers").html(html);-->
+		</section>
+		<!--the map, it was difficult to center outside of bootstrap.-->
+		<div id="map" class="m-auto mt-3 mb-5"></div>
+	</main>
+	<footer>
+<!--		icons?-->
+<!--		https://developer.mozilla.org/en-US/docs/Learn/Accessibility/HTML-->
+	</footer>
 	
 	<!--bootstrap-->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
