--- a/1-dom-warmup.html
+++ b/1-dom-warmup.html
@@ -86,16 +86,19 @@
 	
 	buttonElements.forEach((element, index, notAnarray)=> {
 		console.log('Element: ', element, 'Index: ', index, 'nodeList? :', notAnarray);
+		
 		if (index == 1) {
 		element.addEventListener('click', () => element.style.backgroundColor = "red");
 		} else if (index == 2) {
-			element.addEventListener('click', () => element.style.backgroundColor = "green");
+			element.addEventListener('click', () => document.body.style.backgroundColor = "green");
 		} else if (index == 3) {
-			element.addEventListener('click', ()=> console.log(
+			element.addEventListener('click', ()=>
+					console.log(
 					notAnarray[0].style.backgroundColor = "",
 			notAnarray[1].style.backgroundColor = "",
-			notAnarray[2].style.backgroundColor = ""
-			));
+			document.body.style.backgroundColor = ""
+			)
+		);
 		}
 		
 		});
