DOM practice with notes

--- a/1-dom-warmup.html
+++ b/1-dom-warmup.html
@@ -111,6 +111,7 @@
 	const warningButton = document.getElementById('warning-button');
 	//ADDING THE CLICK EVENT TO ONLY THE BUTTON WITH THE ID NAME, CHANGING ITS BACKGROUND COLOR TO BLUE.
 	warningButton.addEventListener('click', () => warningButton.style.backgroundColor = "blue");
+	//BUT THEN WONDERED HOW I WOULD SELECT IT IF IT HAD NO ID.
 	
 	// I CHANGED MY MIND AND USED querySelectorAll('button') INSTEAD.
 	// I WANTED TO KEEP THE BLUE ONE TO SEE THE DIFFERENCE IN USING FOREACH.
