--- a/1-dom-warmup.html
+++ b/1-dom-warmup.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 <!--	mobile view-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--	bootstrap-->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<title>Title</title>
 	<style>
 		body {
@@ -49,7 +51,7 @@
 
 <main>
 	<section>
-		<div id="blueSquare" class="square" data-color="blue"></div>
+		<div id="blueSquare" class="rounded-circle square" data-color="blue"></div>
 		<div id="redSquare" class="square" data-color="red"></div>
 		<div id="greenSquare" class="square" data-color="green"></div>
 	</section>
