--- a/1-dom-warmup.html
+++ b/1-dom-warmup.html
@@ -69,7 +69,7 @@
 	<hr>
 	<section class = "section2">
 	<div id="changingColors" class="d-flex flex-wrap justify-content-center">
-		<h2>The squares that change colors</h2>
+		<h2 class="col-12 text-center">The squares that change colors</h2>
 		<div class="square"></div>
 		<div class="square"></div>
 		<div class="square"></div>
