--- a/1-dom-warmup.html
+++ b/1-dom-warmup.html
@@ -96,7 +96,7 @@
 			} else if (index === 1) {
 				element.style.backgroundColor = "red"
 			} else if (index === 2) {
-				element.style.backgroundColor = "green";
+				document.body.style.backgroundColor = "green"; //PURPOSELY THE BACKGROUND.
 			}
 		})
 	});
